# spellChecker

./: Dictionary.txt  HashDict  HashDict.cpp  HashDict.h  Node.h  README.md  TimeInterval.h  hashing.ipynb  main.cpp  makeFile  makefile
v2/: CMakeLists.txt  Dictionary.h  LCS.h  Node.h  Timer.h  Trie.h  TrieChecker.h  TrieDictionary.h  editDistance.h  main.cpp  ngrams.h  spellChecker.h
